--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Birra Artigianale e Cibo Divino"/>
     <meta name="twitter:description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
-    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/background-home.jpg"/>
-    <meta name="twitter:url" content="http://beerstrot.it"/>
+    <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/background-home.jpg"/>
+    <meta name="twitter:url" content="http://www.beerstrot.it"/>
     <meta property="fb:app_id" content="1549149915357715"/>
-    <meta property="og:url" content="http://beerstrot.it"/>
+    <meta property="og:url" content="http://www.beerstrot.it"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Birra Artigianale e Cibo Divino"/>
     <meta property="og:description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta"/>
-    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/background-home.jpg"/>
-    <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="canonical" href="http://beerstrot.it"/>
-    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
+    <meta property="og:image:url" content="http://www.beerstrot.it/asset/img/large/background-home.jpg"/>
+    <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
+    <link rel="canonical" href="http://www.beerstrot.it"/>
+    <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -33,7 +33,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
             <li class="name">
-                 <h1><a href="http://beerstrot.it"><img class="img-logo" src="http://beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
+                 <h1><a href="http://www.beerstrot.it"><img class="img-logo" src="http://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -42,17 +42,17 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/menu/">Menù</a></li>
+                <li><a href="http://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/take-away/">Take Away</a></li>
+                <li><a href="http://www.beerstrot.it/take-away/">Take Away</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
+                <li><a href="http://www.beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/social/">Social</a></li>
+                <li><a href="http://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/contatti/">Contatti</a></li>
+                <li><a href="http://www.beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/blog/">Blog</a></li>
+                <li><a href="http://www.beerstrot.it/blog/">Blog</a></li>
             </ul>
         </section>
     </nav>
@@ -98,12 +98,12 @@
         </div>
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-                <a role="button" href="http://beerstrot.it/menu/"><img src="http://beerstrot.it/asset/img/medium/hamburger.jpg" alt="Hamburger" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://www.beerstrot.it/menu/"><img src="http://www.beerstrot.it/asset/img/medium/hamburger.jpg" alt="Hamburger" class="extra-space-image-tab-home"></a>
             </div>
             <div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p>Birra artigianale e cibo di altissima qualità. Facciamo gli hamburger più buoni al mondo utilizzando solo carni da animali al pascolo e verdure fresche di stagione.</p>
                 <p>Cibi preparati con cura maniacale: dalle materie prime, alla preparazione, alla presentazione.</p>
-                <a itemprop="menu" role="button" href="http://beerstrot.it/menu/">Scopri le Delizie &rarr;</a>
+                <a itemprop="menu" role="button" href="http://www.beerstrot.it/menu/">Scopri le Delizie &rarr;</a>
             </div>
         </div>
     </div>
@@ -115,12 +115,12 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://beerstrot.it/take-away/"><img src="http://beerstrot.it/asset/img/medium/take-away.jpg" alt="Take Away" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://www.beerstrot.it/take-away/"><img src="http://www.beerstrot.it/asset/img/medium/take-away.jpg" alt="Take Away" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
                 <p>Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti?</p>
                 <p>Abbiamo un menù anche per questo.</p>
-                <a role="button" href="http://beerstrot.it/take-away/">Scopri il Menù Take Away &rarr;</a>
+                <a role="button" href="http://www.beerstrot.it/take-away/">Scopri il Menù Take Away &rarr;</a>
             </div>
         </div>
     </div>
@@ -132,7 +132,7 @@
         </div>
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-                <a role="button" href="http://beerstrot.it/eventi/"><img src="http://beerstrot.it/asset/img/medium/eventi.jpg" alt="Eventi" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://www.beerstrot.it/eventi/"><img src="http://www.beerstrot.it/asset/img/medium/eventi.jpg" alt="Eventi" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p>A Beerstrot facciamo un sacco di eventi:</p>
@@ -143,7 +143,7 @@
                     <li>Burlesque</li>
                     <li>E tanto altro&hellip;</li>
                 </ul>
-                <a role="button" href="http://beerstrot.it/eventi/">Scopri i Prossimi Eventi &rarr;</a>
+                <a role="button" href="http://www.beerstrot.it/eventi/">Scopri i Prossimi Eventi &rarr;</a>
             </div>
         </div>
     </div>
@@ -155,12 +155,12 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://beerstrot.it/social/"><img src="http://beerstrot.it/asset/img/medium/social.jpg" alt="Scopri il Lato Social" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://www.beerstrot.it/social/"><img src="http://www.beerstrot.it/asset/img/medium/social.jpg" alt="Scopri il Lato Social" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
-                <p>Dillo con un hashtag: pubblica le tue foto e video con <code>#beerstrot</code> o <code>#cavecchiabeerstrot</code> e appariranno nel <a href="http://beerstrot.it/social/">Lato Social</a> di Ca' Vecchia Beerstrot. 
+                <p>Dillo con un hashtag: pubblica le tue foto e video con <code>#beerstrot</code> o <code>#cavecchiabeerstrot</code> e appariranno nel <a href="http://www.beerstrot.it/social/">Lato Social</a> di Ca' Vecchia Beerstrot. 
                 <p>Cosa dice il web di Ca' Vecchia Beerstrot: recensioni e commenti.</p>
-                <a role="button" href="http://beerstrot.it/social/">Scopri il Lato Social &rarr;</a>
+                <a role="button" href="http://www.beerstrot.it/social/">Scopri il Lato Social &rarr;</a>
             </div>
         </div>
     </div>
@@ -173,7 +173,7 @@
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
                 <div class="flex-video widescreen vimeo extra-space-video">
-                    <a role="button" href="http://beerstrot.it/video/">
+                    <a role="button" href="http://www.beerstrot.it/video/">
                         <iframe width="1280" height="720" src="https://www.youtube.com/embed/2_gbVco836c?rel=0" frameborder="0" allowfullscreen></iframe>
                     </a>
                 </div>
@@ -182,7 +182,7 @@
                 <p>Come raggiungerci, contattarci o prenotare un tavolo.</p>
                 <p>Sei un blogger o un giornalista? Compila il form e ricevi tutte le informazioni necessarie per scrivere su di noi.</p>
                 <p>Scopri il team di Ca' Vecchia Beerstrot e la location</p>
-                <a role="button" href="http://beerstrot.it/contatti/">Contattaci &rarr;</a>
+                <a role="button" href="http://www.beerstrot.it/contatti/">Contattaci &rarr;</a>
             </div>
         </div>
     </div>
@@ -194,11 +194,11 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://beerstrot.it/blog/"><img src="http://beerstrot.it/asset/img/medium/quattro-birre-artigianali-americane.jpg" alt="Birre in Love" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://www.beerstrot.it/blog/"><img src="http://www.beerstrot.it/asset/img/medium/quattro-birre-artigianali-americane.jpg" alt="Birre in Love" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
                 <p>Tutte le novità, nuove birre, nuovi cibi e abbinamenti, curiosità sugli eventi e su cosa bolle in pentola&hellip;</p>
-                <a role="button" href="http://beerstrot.it/blog/">Vai alle Notizie e alle Novità &rarr;</a>
+                <a role="button" href="http://www.beerstrot.it/blog/">Vai alle Notizie e alle Novità &rarr;</a>
             </div>
         </div>
     </div>
@@ -308,19 +308,19 @@
     <div class="row footer">
         <div class="small-12 medium-12 large-12 columns">
             <p class="links">
-                <a href="http://beerstrot.it">Home</a>
-                <a href="http://beerstrot.it/menu/">Menù</a>
-                <a href="http://beerstrot.it/take-away/">Take Away</a>
-                <a href="http://beerstrot.it/eventi/">Eventi</a>
-                <a href="http://beerstrot.it/social/">Social</a>
-                <a href="http://beerstrot.it/contatti/">Contatti</a>
-                <a href="http://beerstrot.it/blog/">Blog</a>
+                <a href="http://www.beerstrot.it">Home</a>
+                <a href="http://www.beerstrot.it/menu/">Menù</a>
+                <a href="http://www.beerstrot.it/take-away/">Take Away</a>
+                <a href="http://www.beerstrot.it/eventi/">Eventi</a>
+                <a href="http://www.beerstrot.it/social/">Social</a>
+                <a href="http://www.beerstrot.it/contatti/">Contatti</a>
+                <a href="http://www.beerstrot.it/blog/">Blog</a>
             </p>
         </div>
     </div>
 <!-- fine navbar footer-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
-    <script src="http://beerstrot.it/js/app.min.js"></script>
+    <script src="http://www.beerstrot.it/js/app.min.js"></script>
 </body>
 </html>
