--- a/contatti/index.html
+++ b/contatti/index.html
@@ -10,9 +10,9 @@
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta property="fb:app_id" content="1549149915357715"/>
-    <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="canonical" href="http://beerstrot.it/contatti/"/>
-    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
+    <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
+    <link rel="canonical" href="http://www.beerstrot.it/contatti/"/>
+    <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -20,7 +20,7 @@
    <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
             <li class="name">
-                 <h1><a href="http://beerstrot.it"><img class="img-logo" src="http://beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
+                 <h1><a href="http://www.beerstrot.it"><img class="img-logo" src="http://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -29,17 +29,17 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/menu/">Menù</a></li>
+                <li><a href="http://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/take-away/">Take Away</a></li>
+                <li><a href="http://www.beerstrot.it/take-away/">Take Away</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
+                <li><a href="http://www.beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/social/">Social</a></li>
+                <li><a href="http://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
-                <li class="active"><a href="http://beerstrot.it/contatti/">Contatti</a></li>
+                <li class="active"><a href="http://www.beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/blog/">Blog</a></li>
+                <li><a href="http://www.beerstrot.it/blog/">Blog</a></li>
             </ul>
         </section>
     </nav>
@@ -71,7 +71,7 @@
                     <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fi-telephone"></i> Prenota</a></span>
             </div>
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><img class="extra-space-image-tab-contatti" src="http://beerstrot.it/asset/img/medium/mappa.jpg" alt="Mappa"></a>
+                <a role="button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><img class="extra-space-image-tab-contatti" src="http://www.beerstrot.it/asset/img/medium/mappa.jpg" alt="Mappa"></a>
                 <span class="show-for-small"><br><a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fi-telephone"></i> Prenota</a></span>
             </div>
         </div>
@@ -147,8 +147,8 @@
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
                 <ul id="team-tab" class="small-block-grid-2 medium-block-grid-3 large-block-grid-3 extra-space-image-tab-home">
                     <li>
-                        <a href="http://beerstrot.it/contatti/team/giulia-mazza.html">
-                            <img src="http://beerstrot.it/asset/img/thumbs/giulia-mazza-th.jpg" alt="Giulia Mazza">
+                        <a href="http://www.beerstrot.it/contatti/team/giulia-mazza.html">
+                            <img src="http://www.beerstrot.it/asset/img/thumbs/giulia-mazza-th.jpg" alt="Giulia Mazza">
                             <div class="panel panel-border">
                                 <h5>Giulia</h5>
                                 <h6 class="subheader">Fondatrice</h6>
@@ -156,8 +156,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/contatti/team/andrea-tagliazucchi.html">
-                            <img src="http://beerstrot.it/asset/img/thumbs/andrea-tagliazucchi-th.jpg" alt="Andrea Tagliazucchi">
+                        <a href="http://www.beerstrot.it/contatti/team/andrea-tagliazucchi.html">
+                            <img src="http://www.beerstrot.it/asset/img/thumbs/andrea-tagliazucchi-th.jpg" alt="Andrea Tagliazucchi">
                             <div class="panel panel-border">
                                 <h5>Andrea</h5>
                                 <h6 class="subheader">Fondatore</h6>
@@ -165,8 +165,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/contatti/team/giovanni-attilio.html">
-                            <img src="http://beerstrot.it/asset/img/thumbs/giovanni-attilio-th.jpg" alt="Giovanni Attilio">
+                        <a href="http://www.beerstrot.it/contatti/team/giovanni-attilio.html">
+                            <img src="http://www.beerstrot.it/asset/img/thumbs/giovanni-attilio-th.jpg" alt="Giovanni Attilio">
                             <div class="panel panel-border">
                                 <h5>Giovanni</h5>
                                 <h6 class="subheader">Fondatore</h6>
@@ -192,93 +192,93 @@
             <div class="medium-6 large-6 columns">
                <ul class="clearing-thumbs small-block-grid-3 medium-block-grid-3 large-block-grid-3 extra-space-image-tab-home" data-clearing>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/insegna-beerstrot-con-cielo.jpg" class="th">
-                            <img data-caption="Insegna d'ingresso a Ca' Vecchia Beerstrot"  src="http://beerstrot.it/asset/img/thumbs/insegna-beerstrot-con-cielo-th.jpg" alt="Insegna Ca' Vecchia Beerstrot">
+                        <a href="http://www.beerstrot.it/asset/img/large/insegna-beerstrot-con-cielo.jpg" class="th">
+                            <img data-caption="Insegna d'ingresso a Ca' Vecchia Beerstrot"  src="http://www.beerstrot.it/asset/img/thumbs/insegna-beerstrot-con-cielo-th.jpg" alt="Insegna Ca' Vecchia Beerstrot">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/vialetto-e-erba.jpg" class="th">
-                            <img data-caption="Vialetto d'ingresso"  src="http://beerstrot.it/asset/img/thumbs/vialetto-e-erba-th.jpg" alt="Vialetto Entrata e Erba">
+                        <a href="http://www.beerstrot.it/asset/img/large/vialetto-e-erba.jpg" class="th">
+                            <img data-caption="Vialetto d'ingresso"  src="http://www.beerstrot.it/asset/img/thumbs/vialetto-e-erba-th.jpg" alt="Vialetto Entrata e Erba">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/fiori-e-aia-beerstrot.jpg" class="th">
-                            <img data-caption="Ingresso a Ca' Vecchia Beerstrot"  src="http://beerstrot.it/asset/img/thumbs/fiori-e-aia-beerstrot-th.jpg" alt="Aias e Fiori">
+                        <a href="http://www.beerstrot.it/asset/img/large/fiori-e-aia-beerstrot.jpg" class="th">
+                            <img data-caption="Ingresso a Ca' Vecchia Beerstrot"  src="http://www.beerstrot.it/asset/img/thumbs/fiori-e-aia-beerstrot-th.jpg" alt="Aias e Fiori">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/aia-beerstrot.jpg" class="th">
-                            <img data-caption="Aia e rosmarino" src="http://beerstrot.it/asset/img/thumbs/aia-beerstrot-th.jpg" alt="Aia e rosmarino">
+                        <a href="http://www.beerstrot.it/asset/img/large/aia-beerstrot.jpg" class="th">
+                            <img data-caption="Aia e rosmarino" src="http://www.beerstrot.it/asset/img/thumbs/aia-beerstrot-th.jpg" alt="Aia e rosmarino">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/panorama-colline-beerstrot.jpg" class="th">
-                            <img data-caption="Un panorama mozzafiato"  src="http://beerstrot.it/asset/img/thumbs/panorama-colline-beerstrot-th.jpg" alt="Colline a Ca' Vecchia Beerstrot">
+                        <a href="http://www.beerstrot.it/asset/img/large/panorama-colline-beerstrot.jpg" class="th">
+                            <img data-caption="Un panorama mozzafiato"  src="http://www.beerstrot.it/asset/img/thumbs/panorama-colline-beerstrot-th.jpg" alt="Colline a Ca' Vecchia Beerstrot">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/rosmarino.jpg" class="th">
-                            <img data-caption="Aia e Birreria"  src="http://beerstrot.it/asset/img/thumbs/rosmarino-th.jpg" alt="Aia e Birreria">
+                        <a href="http://www.beerstrot.it/asset/img/large/rosmarino.jpg" class="th">
+                            <img data-caption="Aia e Birreria"  src="http://www.beerstrot.it/asset/img/thumbs/rosmarino-th.jpg" alt="Aia e Birreria">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/alberi-beerstrot.jpg" class="th">
-                            <img data-caption="Aia e panorama"  src="http://beerstrot.it/asset/img/thumbs/alberi-beerstrot-th.jpg" alt="Aia e Panorama">
+                        <a href="http://www.beerstrot.it/asset/img/large/alberi-beerstrot.jpg" class="th">
+                            <img data-caption="Aia e panorama"  src="http://www.beerstrot.it/asset/img/thumbs/alberi-beerstrot-th.jpg" alt="Aia e Panorama">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/tavolo-dettaglio-beerstrot.jpg" class="th">
-                            <img data-caption="Un locale bellisssimo" src="http://beerstrot.it/asset/img/thumbs/tavolo-dettaglio-beerstrot-th.jpg" alt="Tavolo Dettaglio">
+                        <a href="http://www.beerstrot.it/asset/img/large/tavolo-dettaglio-beerstrot.jpg" class="th">
+                            <img data-caption="Un locale bellisssimo" src="http://www.beerstrot.it/asset/img/thumbs/tavolo-dettaglio-beerstrot-th.jpg" alt="Tavolo Dettaglio">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/bancone-e-sedie-dettaglio.jpg" class="th">
-                            <img data-caption="Bancone e sgabelli"  src="http://beerstrot.it/asset/img/thumbs/bancone-e-sedie-dettaglio-th.jpg" alt="Bancone e Sgabelli">
+                        <a href="http://www.beerstrot.it/asset/img/large/bancone-e-sedie-dettaglio.jpg" class="th">
+                            <img data-caption="Bancone e sgabelli"  src="http://www.beerstrot.it/asset/img/thumbs/bancone-e-sedie-dettaglio-th.jpg" alt="Bancone e Sgabelli">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/quattro-birre-artigianali-americane.jpg" class="th">
-                            <img data-caption="Birre Artigianali" src="http://beerstrot.it/asset/img/thumbs/quattro-birre-artigianali-americane-th.jpg" alt="Scaffalatura Dettaglio Birre Artigianali">
+                        <a href="http://www.beerstrot.it/asset/img/large/quattro-birre-artigianali-americane.jpg" class="th">
+                            <img data-caption="Birre Artigianali" src="http://www.beerstrot.it/asset/img/thumbs/quattro-birre-artigianali-americane-th.jpg" alt="Scaffalatura Dettaglio Birre Artigianali">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/tavoli.jpg" class="th">
-                            <img data-caption="Tavoli apparecchiati"  src="http://beerstrot.it/asset/img/thumbs/tavoli-th.jpg" alt="tavoli">
+                        <a href="http://www.beerstrot.it/asset/img/large/tavoli.jpg" class="th">
+                            <img data-caption="Tavoli apparecchiati"  src="http://www.beerstrot.it/asset/img/thumbs/tavoli-th.jpg" alt="tavoli">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/tavalo-apparecchiata-dettaglio-posate.jpg" class="th">
-                            <img data-caption="Tavoli apparecchiati"  src="http://beerstrot.it/asset/img/thumbs/tavalo-apparecchiata-dettaglio-posate-th.jpg" alt="Tavoli apparecchiati">
+                        <a href="http://www.beerstrot.it/asset/img/large/tavalo-apparecchiata-dettaglio-posate.jpg" class="th">
+                            <img data-caption="Tavoli apparecchiati"  src="http://www.beerstrot.it/asset/img/thumbs/tavalo-apparecchiata-dettaglio-posate-th.jpg" alt="Tavoli apparecchiati">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/panorama-da-porta-finestra.jpg" class="th">
-                            <img data-caption="Un panorma mozzafiato" src="http://beerstrot.it/asset/img/thumbs/panorama-da-porta-finestra-th.jpg" alt="Panorama da Porta Finestra">
+                        <a href="http://www.beerstrot.it/asset/img/large/panorama-da-porta-finestra.jpg" class="th">
+                            <img data-caption="Un panorma mozzafiato" src="http://www.beerstrot.it/asset/img/thumbs/panorama-da-porta-finestra-th.jpg" alt="Panorama da Porta Finestra">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/birra-bici-hamburger.jpg" class="th">
-                            <img data-caption="Birra, bici e hamburger" src="http://beerstrot.it/asset/img/thumbs/birra-bici-hamburger-th.jpg" alt="Birra, Bici e Hamburger">
+                        <a href="http://www.beerstrot.it/asset/img/large/birra-bici-hamburger.jpg" class="th">
+                            <img data-caption="Birra, bici e hamburger" src="http://www.beerstrot.it/asset/img/thumbs/birra-bici-hamburger-th.jpg" alt="Birra, Bici e Hamburger">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/luca-giovanni.jpg" class="th">
-                            <img data-caption="Birra e bici" src="http://beerstrot.it/asset/img/thumbs/luca-giovanni-th.jpg" alt="Birra e Bici">
+                        <a href="http://www.beerstrot.it/asset/img/large/luca-giovanni.jpg" class="th">
+                            <img data-caption="Birra e bici" src="http://www.beerstrot.it/asset/img/thumbs/luca-giovanni-th.jpg" alt="Birra e Bici">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/hamburger.jpg" class="th">
-                            <img data-caption="Hamburger" src="http://beerstrot.it/asset/img/thumbs/hamburger-th.jpg" alt="Hamburger">
+                        <a href="http://www.beerstrot.it/asset/img/large/hamburger.jpg" class="th">
+                            <img data-caption="Hamburger" src="http://www.beerstrot.it/asset/img/thumbs/hamburger-th.jpg" alt="Hamburger">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/eating-burger.jpg" class="th">
-                            <img data-caption="Mangiando hamburger, alette e costine..." src="http://beerstrot.it/asset/img/thumbs/eating-burger-th.jpg" alt="Hamburger, Alette, Costine">
+                        <a href="http://www.beerstrot.it/asset/img/large/eating-burger.jpg" class="th">
+                            <img data-caption="Mangiando hamburger, alette e costine..." src="http://www.beerstrot.it/asset/img/thumbs/eating-burger-th.jpg" alt="Hamburger, Alette, Costine">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/birra-rovesciata.jpg" class="th">
-                            <img data-caption="Birra rovesciata" src="http://beerstrot.it/asset/img/thumbs/birra-rovesciata-th.jpg" alt="Birra Rovesciata">
+                        <a href="http://www.beerstrot.it/asset/img/large/birra-rovesciata.jpg" class="th">
+                            <img data-caption="Birra rovesciata" src="http://www.beerstrot.it/asset/img/thumbs/birra-rovesciata-th.jpg" alt="Birra Rovesciata">
                         </a>
                     </li>
                 </ul> 
@@ -402,19 +402,19 @@
     <div class="row footer">
         <div class="small-12 medium-12 large-12 columns">
             <p class="links">
-                <a href="http://beerstrot.it">Home</a>
-                <a href="http://beerstrot.it/menu/">Menù</a>
-                <a href="http://beerstrot.it/take-away/">Take Away</a>
-                <a href="http://beerstrot.it/eventi/">Eventi</a>
-                <a href="http://beerstrot.it/social/">Social</a>
-                <a href="http://beerstrot.it/contatti/">Contatti</a>
-                <a href="http://beerstrot.it/blog/">Blog</a>
+                <a href="http://www.beerstrot.it">Home</a>
+                <a href="http://www.beerstrot.it/menu/">Menù</a>
+                <a href="http://www.beerstrot.it/take-away/">Take Away</a>
+                <a href="http://www.beerstrot.it/eventi/">Eventi</a>
+                <a href="http://www.beerstrot.it/social/">Social</a>
+                <a href="http://www.beerstrot.it/contatti/">Contatti</a>
+                <a href="http://www.beerstrot.it/blog/">Blog</a>
             </p>
         </div>
     </div>
 <!-- fine navbar footer-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
-    <script src="http://beerstrot.it/js/app.min.js"></script>
+    <script src="http://www.beerstrot.it/js/app.min.js"></script>
 </body>
 </html>
