--- a/contatti/presskit/index.html
+++ b/contatti/presskit/index.html
@@ -10,9 +10,9 @@
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta property="fb:app_id" content="1549149915357715"/>
-    <link rel="canonical" href="http://beerstrot.it/contatti/presskit/"/>
-    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
-    <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
+    <link rel="canonical" href="http://www.beerstrot.it/contatti/presskit/"/>
+    <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
+    <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -20,7 +20,7 @@
    <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
             <li class="name">
-                 <h1><a href="http://beerstrot.it"><img class="img-logo" src="http://beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
+                 <h1><a href="http://www.beerstrot.it"><img class="img-logo" src="http://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -29,17 +29,17 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/menu/">Menù</a></li>
+                <li><a href="http://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/take-away/">Take Away</a></li>
+                <li><a href="http://www.beerstrot.it/take-away/">Take Away</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
+                <li><a href="http://www.beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/social/">Social</a></li>
+                <li><a href="http://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
-                <li class="active"><a href="http://beerstrot.it/contatti/">Contatti</a></li>
+                <li class="active"><a href="http://www.beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/blog/">Blog</a></li>
+                <li><a href="http://www.beerstrot.it/blog/">Blog</a></li>
             </ul>
         </section>
     </nav>
@@ -55,7 +55,7 @@
             <div class="medium-6 large-6 columns">
                 <h2>Scarica il Press-Kit</h2>
                     <p>Ti abbiamo inviato una email. Conferma l'iscrizione se vuoi ricevere aggiornamenti su Ca' Vecchia Beerstrot. Nel frattempo scarica il press kit.</p>
-                    <a role="button" href="http://beerstrot.it/contatti/presskit/150621_beerstrot-press-kit.pdf" download="Press Kit.pdf" target="_blank" class="button extra-space-button">Scarica il Press Kit</a>
+                    <a role="button" href="http://www.beerstrot.it/contatti/presskit/150621_beerstrot-press-kit.pdf" download="Press Kit.pdf" target="_blank" class="button extra-space-button">Scarica il Press Kit</a>
                     <p><small>Se non riesci a scaricare il file clicca col pulsante destro del mouse sul bottone rosso e seleziona <em>Scarica il file</em></small></p>
             </div>
             <div class="medium-6 large-6 columns">
@@ -169,19 +169,19 @@
     <div class="row footer">
         <div class="small-12 medium-12 large-12 columns">
             <p class="links">
-                <a href="http://beerstrot.it">Home</a>
-                <a href="http://beerstrot.it/menu/">Menù</a>
-                <a href="http://beerstrot.it/take-away/">Take Away</a>
-                <a href="http://beerstrot.it/eventi/">Eventi</a>
-                <a href="http://beerstrot.it/social/">Social</a>
-                <a href="http://beerstrot.it/contatti/">Contatti</a>
-                <a href="http://beerstrot.it/blog/">Blog</a>
+                <a href="http://www.beerstrot.it">Home</a>
+                <a href="http://www.beerstrot.it/menu/">Menù</a>
+                <a href="http://www.beerstrot.it/take-away/">Take Away</a>
+                <a href="http://www.beerstrot.it/eventi/">Eventi</a>
+                <a href="http://www.beerstrot.it/social/">Social</a>
+                <a href="http://www.beerstrot.it/contatti/">Contatti</a>
+                <a href="http://www.beerstrot.it/blog/">Blog</a>
             </p>
         </div>
     </div>
 <!-- fine navbar footer-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
-    <script src="http://beerstrot.it/js/app.min.js"></script>
+    <script src="http://www.beerstrot.it/js/app.min.js"></script>
 </body>
 </html>
