--- a/eventi/index.html
+++ b/eventi/index.html
@@ -10,9 +10,9 @@
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta property="fb:app_id" content="1549149915357715"/>
-    <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="canonical" href="http://beerstrot.it/eventi/"/>
-    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
+    <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
+    <link rel="canonical" href="http://www.beerstrot.it/eventi/"/>
+    <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -21,7 +21,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
             <li class="name">
-                 <h1><a href="http://beerstrot.it"><img class="img-logo" src="http://beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
+                 <h1><a href="http://www.beerstrot.it"><img class="img-logo" src="http://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h1>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -30,17 +30,17 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/menu/">Menù</a></li>
+                <li><a href="http://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/take-away/">Take Away</a></li>
+                <li><a href="http://www.beerstrot.it/take-away/">Take Away</a></li>
                 <li class="divider"></li>
-                <li class="active"><a href="http://beerstrot.it/eventi/">Eventi</a></li>
+                <li class="active"><a href="http://www.beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/social/">Social</a></li>
+                <li><a href="http://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/contatti/">Contatti</a></li>
+                <li><a href="http://www.beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/blog/">Blog</a></li>
+                <li><a href="http://www.beerstrot.it/blog/">Blog</a></li>
             </ul>
         </section>
     </nav>
@@ -61,14 +61,14 @@
                     <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
                 </div>
                 <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.it/eventi/san-martino.html">
-                        <img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/san-martino-th.jpg" alt="Cena di San Martino Alberi e Foglie">
+                    <a href="http://www.beerstrot.it/eventi/san-martino.html">
+                        <img class="extra-space-image-event" src="http://www.beerstrot.it/asset/img/thumbs/san-martino-th.jpg" alt="Cena di San Martino Alberi e Foglie">
                     </a>
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>Cena di San Martino</h2>
                     <p>Menù a base di Castagne, Funghi e Vin Brulé.</p>
-                    <a href="http://beerstrot.it/eventi/san-martino.html">Scopri l'evento &rarr;</a>
+                    <a href="http://www.beerstrot.it/eventi/san-martino.html">Scopri l'evento &rarr;</a>
                 </div>
             </article>
             <div class="row">
@@ -83,14 +83,14 @@
                     <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
                 </div>
                 <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.it/eventi/halloween.html">
-                        <img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/halloween-th.jpg" alt="Festa di Halloween">
+                    <a href="http://www.beerstrot.it/eventi/halloween.html">
+                        <img class="extra-space-image-event" src="http://www.beerstrot.it/asset/img/thumbs/halloween-th.jpg" alt="Festa di Halloween">
                     </a>
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>Halloween: Musica e Birra da Paura</h2>
                     <p>Birra, Streghe e Musica live a Ca' Vecchia Beerstrot.</p>
-                    <a href="http://beerstrot.it/eventi/halloween.html">Scopri l'evento &rarr;</a>
+                    <a href="http://www.beerstrot.it/eventi/halloween.html">Scopri l'evento &rarr;</a>
                 </div>
             </article>
             <div class="row">
@@ -105,14 +105,14 @@
                     <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
                 </div>
                 <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.it/eventi/instagramer.html">
-                        <img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/instagramer-th.jpg" alt="Festa della Birra">
+                    <a href="http://www.beerstrot.it/eventi/instagramer.html">
+                        <img class="extra-space-image-event" src="http://www.beerstrot.it/asset/img/thumbs/instagramer-th.jpg" alt="Festa della Birra">
                     </a>
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>Instagramer si incontrano a Ca' Vecchia Beerstrot</h2>
                     <p>Più di 120 Instagramer, provenienti da tutta Italia, si incontrano a Ca' Vecchia per un Instawalk.</p>
-                    <a href="http://beerstrot.it/eventi/instagramer.html">Scopri l'evento &rarr;</a>
+                    <a href="http://www.beerstrot.it/eventi/instagramer.html">Scopri l'evento &rarr;</a>
                 </div>
             </article>
             <div class="row">
@@ -127,14 +127,14 @@
                     <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
                 </div>
                 <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.it/eventi/beerfest.html">
-                        <img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/beerfest-th.jpg" alt="Festa della Birra">
+                    <a href="http://www.beerstrot.it/eventi/beerfest.html">
+                        <img class="extra-space-image-event" src="http://www.beerstrot.it/asset/img/thumbs/beerfest-th.jpg" alt="Festa della Birra">
                     </a>
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>Beerfest: Due Giorni di Birra e Concerti</h2>
                     <p>Concludiamo l'estate col botto. The Cadillacs Band, SottoZero e i dj Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot.</p>
-                    <a href="http://beerstrot.it/eventi/beerfest.html">Scopri l'evento &rarr;</a>
+                    <a href="http://www.beerstrot.it/eventi/beerfest.html">Scopri l'evento &rarr;</a>
                 </div>
             </article>
             <div class="row">
@@ -149,12 +149,12 @@
                     <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
                 </div>
                 <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.it/eventi/aperitivi.html"><img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/aperitivi-th.jpg" alt="Aperitivi a Ca' Vecchia Beerstrot"></a>
+                    <a href="http://www.beerstrot.it/eventi/aperitivi.html"><img class="extra-space-image-event" src="http://www.beerstrot.it/asset/img/thumbs/aperitivi-th.jpg" alt="Aperitivi a Ca' Vecchia Beerstrot"></a>
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>Estate + aperitivo = Ca' Vecchia Beerstrot</h2>
                     <p>Tutti i Venerdì, Sabati e Domeniche di Luglio e Agosto aperitivi con vista mozzafiato.</p>
-                    <a href="http://beerstrot.it/eventi/aperitivi.html">Scopri l'evento &rarr;</a>
+                    <a href="http://www.beerstrot.it/eventi/aperitivi.html">Scopri l'evento &rarr;</a>
                 </div>
             </article>
             <div class="row">
@@ -169,12 +169,12 @@
                     <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
                 </div>
                 <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.it/eventi/festa-estate-concerto-live.html"><img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/festa-estate-concerto-live-th.jpg" alt="Flora e Fauna in Concerto"></a>
+                    <a href="http://www.beerstrot.it/eventi/festa-estate-concerto-live.html"><img class="extra-space-image-event" src="http://www.beerstrot.it/asset/img/thumbs/festa-estate-concerto-live-th.jpg" alt="Flora e Fauna in Concerto"></a>
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>L'estate festeggiamola con i Flora e Fauna</h2>
                     <p>Musica live a Ca' Vecchia Beerstrot. La band Flora e Fauna di Osimo ci allieterà con la loro musica Pop Rock.</p>
-                    <a href="http://beerstrot.it/eventi/festa-estate-concerto-live.html">Scopri l'evento &rarr;</a>
+                    <a href="http://www.beerstrot.it/eventi/festa-estate-concerto-live.html">Scopri l'evento &rarr;</a>
                 </div>
             </article>
             <div class="row">
@@ -189,12 +189,12 @@
                     <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
                 </div>
                 <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.it/eventi/apertura.html"><img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/apertura-th.jpg" alt="Apertura Ca' Vecchia Beerstrot"></a>
+                    <a href="http://www.beerstrot.it/eventi/apertura.html"><img class="extra-space-image-event" src="http://www.beerstrot.it/asset/img/thumbs/apertura-th.jpg" alt="Apertura Ca' Vecchia Beerstrot"></a>
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>Un evento per tossici della birra, hamburger e non solo</h2>
                     <p>Piccolo rinfresco con amici. Comincia ad assaporare il <strong>Gusto in Fermento</strong>.</p>
-                    <a href="http://beerstrot.it/eventi/apertura.html">Scopri l'evento &rarr;</a>
+                    <a href="http://www.beerstrot.it/eventi/apertura.html">Scopri l'evento &rarr;</a>
                 </div>
             </article>
             <div class="row hide-for-small">
@@ -310,19 +310,19 @@
     <div class="row footer">
         <div class="small-12 medium-12 large-12 columns">
             <p class="links">
-                <a href="http://beerstrot.it">Home</a>
-                <a href="http://beerstrot.it/menu/">Menù</a>
-                <a href="http://beerstrot.it/take-away/">Take Away</a>
-                <a href="http://beerstrot.it/eventi/">Eventi</a>
-                <a href="http://beerstrot.it/social/">Social</a>
-                <a href="http://beerstrot.it/contatti/">Contatti</a>
-                <a href="http://beerstrot.it/blog/">Blog</a>
+                <a href="http://www.beerstrot.it">Home</a>
+                <a href="http://www.beerstrot.it/menu/">Menù</a>
+                <a href="http://www.beerstrot.it/take-away/">Take Away</a>
+                <a href="http://www.beerstrot.it/eventi/">Eventi</a>
+                <a href="http://www.beerstrot.it/social/">Social</a>
+                <a href="http://www.beerstrot.it/contatti/">Contatti</a>
+                <a href="http://www.beerstrot.it/blog/">Blog</a>
             </p>
         </div>
     </div>
 <!-- fine navbar footer-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
-    <script src="http://beerstrot.it/js/app.min.js"></script>
+    <script src="http://www.beerstrot.it/js/app.min.js"></script>
 </body>
 </html>
