--- a/menu/birra/breaking-hops-double-ipa.html
+++ b/menu/birra/breaking-hops-double-ipa.html
@@ -13,17 +13,17 @@
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Birra Breaking Hops Double IPA"/>
     <meta name="twitter:description" content="Birra ambrata, in stile double IPA. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
-    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/breaking-hops-double-ipa.jpg"/>
-    <meta name="twitter:url" content="http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html"/>
+    <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/breaking-hops-double-ipa.jpg"/>
+    <meta name="twitter:url" content="http://www.beerstrot.it/menu/birra/breaking-hops-double-ipa.html"/>
     <meta property="fb:app_id" content="1549149915357715"/>
-    <meta property="og:url" content="http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html"/>
+    <meta property="og:url" content="http://www.beerstrot.it/menu/birra/breaking-hops-double-ipa.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Birra Breaking Hops Double IPA"/>
     <meta property="og:description" content="Birra ambrata, in stile double IPA. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
-    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/breaking-hops-double-ipa.jpg"/>
-    <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="canonical" href="http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html"/>
-    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
+    <meta property="og:image:url" content="http://www.beerstrot.it/asset/img/large/breaking-hops-double-ipa.jpg"/>
+    <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
+    <link rel="canonical" href="http://www.beerstrot.it/menu/birra/breaking-hops-double-ipa.html"/>
+    <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -32,7 +32,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
             <li class="name">
-                 <h2><a href="http://beerstrot.it"><img class="img-logo" src="http://beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h2>
+                 <h2><a href="http://www.beerstrot.it"><img class="img-logo" src="http://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h2>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -41,30 +41,30 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li class="active"><a href="http://beerstrot.it/menu/">Menù</a></li>
+                <li class="active"><a href="http://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/take-away/">Take Away</a></li>
+                <li><a href="http://www.beerstrot.it/take-away/">Take Away</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
+                <li><a href="http://www.beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/social/">Social</a></li>
+                <li><a href="http://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/contatti/">Contatti</a></li>
+                <li><a href="http://www.beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/blog/">Blog</a></li>
+                <li><a href="http://www.beerstrot.it/blog/">Blog</a></li>
             </ul>
         </section>
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.it/asset/img/large/breaking-hops-double-ipa.jpg" alt="Birra Breaking Hops Double IPA"/>
+    <img class="image-hero" src="http://www.beerstrot.it/asset/img/large/breaking-hops-double-ipa.jpg" alt="Birra Breaking Hops Double IPA"/>
     <div class="row">
         <aside class="medium-5 large-4 columns">
            <header>
                 <div class="row">
                     <div class="medium-12 large-12 columns">
                         <h1>Breaking Hops Double IPA</h1>
-                        <h6 class="by-line">Scritto da <a href="http://beerstrot.it/contatti/team/giulia-mazza.html">Giulia Mazza</a> <br>il 10 Aprile 2015</h6>
+                        <h6 class="by-line">Scritto da <a href="http://www.beerstrot.it/contatti/team/giulia-mazza.html">Giulia Mazza</a> <br>il 10 Aprile 2015</h6>
                             <h6 class="by-line">Foto <a href="http://www.mc-77.com/" target="_blank">Birrificio MC-77</a></h6>
                         <div class="share-block">
                             <h6 class="by-line" ><span data-tooltip aria-haspopup="true" class="has-tip" title="% di alcool in volume.">ABV:</span> 7,9% | <span data-tooltip aria-haspopup="true" class="has-tip" title="Misura dell'amaro. Da 0-non amaro a 100-amaro. l’IBU non indica in assoluto l’amarezza della birra: nelle birre con più corpo, a un alto IBU corrisponde una maggiore quantità di malto, per bilanciare il gusto.">IBU's:</span> </h6>
@@ -80,7 +80,7 @@
             <p>Birra ambrata, in stile double IPA. La frutta esotica e l'amaro dei luppoli americani e neo-zelandesi dominano prepotenti il gusto persistente di questa birra.</p>
             <p>Finale lungo e amaro.</p>
             <h2>Con cosa assaggiarla</h2>
-            <p>Ideale con <a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html" target="_blank">Costine in salsa BBQ</a>.</p>  
+            <p>Ideale con <a href="http://www.beerstrot.it/menu/cibo/costine-in-salsa-bbq.html" target="_blank">Costine in salsa BBQ</a>.</p>  
         </div>
     </div>
 <!-- fine articolo -->
@@ -94,13 +94,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="block-grid-social-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://www.beerstrot.it/menu/birra/breaking-hops-double-ipa.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://www.beerstrot.it/menu/birra/breaking-hops-double-ipa.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://www.beerstrot.it/menu/birra/breaking-hops-double-ipa.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
@@ -112,7 +112,7 @@
     <div class="row">
         <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
             <div class="clearfix">
-                <a href="http://beerstrot.it/menu/#fndtn-birra" class="left">&larr; Torna al menu</a>
+                <a href="http://www.beerstrot.it/menu/#fndtn-birra" class="left">&larr; Torna al menu</a>
             </div>
         </div> 
     </div>
@@ -223,19 +223,19 @@
     <div class="row footer">
         <div class="small-12 medium-12 large-12 columns">
             <p class="links">
-                <a href="http://beerstrot.it">Home</a>
-                <a href="http://beerstrot.it/menu/">Menù</a>
-                <a href="http://beerstrot.it/take-away/">Take Away</a>
-                <a href="http://beerstrot.it/eventi/">Eventi</a>
-                <a href="http://beerstrot.it/social/">Social</a>
-                <a href="http://beerstrot.it/contatti/">Contatti</a>
-                <a href="http://beerstrot.it/blog/">Blog</a>
+                <a href="http://www.beerstrot.it">Home</a>
+                <a href="http://www.beerstrot.it/menu/">Menù</a>
+                <a href="http://www.beerstrot.it/take-away/">Take Away</a>
+                <a href="http://www.beerstrot.it/eventi/">Eventi</a>
+                <a href="http://www.beerstrot.it/social/">Social</a>
+                <a href="http://www.beerstrot.it/contatti/">Contatti</a>
+                <a href="http://www.beerstrot.it/blog/">Blog</a>
             </p>
         </div>
     </div>
 <!-- fine navbar footer-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
-    <script src="http://beerstrot.it/js/app.min.js"></script>
+    <script src="http://www.beerstrot.it/js/app.min.js"></script>
 </body>
 </html>
