--- a/menu/cibo/lamb.html
+++ b/menu/cibo/lamb.html
@@ -13,17 +13,17 @@
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Hamburger Lamb"/>
     <meta name="twitter:description" content="180 grammi di carne di agnello eccezionale. Tagliata a mano a mo di tartare. Lo yougurt rende il tutto semplicemente perfetto, ammorbidendo il sapore forte dell'agnello"/>
-    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/lamb.jpg"/>
-    <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/lamb.html"/>
+    <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/lamb.jpg"/>
+    <meta name="twitter:url" content="http://www.beerstrot.it/menu/cibo/lamb.html"/>
     <meta property="fb:app_id" content="1549149915357715"/>
-    <meta property="og:url" content="http://beerstrot.it/menu/cibo/lamb.html"/>
+    <meta property="og:url" content="http://www.beerstrot.it/menu/cibo/lamb.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Hamburger Lamb"/>
     <meta property="og:description" content="180 grammi di carne di agnello eccezionale. Tagliata a mano a mo di tartare. Lo yougurt rende il tutto semplicemente perfetto, ammorbidendo il sapore forte dell'agnello"/>
-    <meta property="og:image:url" content="http://beerstrot.it/asset/img/large/lamb.jpg"/>
-    <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="canonical" href="http://beerstrot.it/menu/cibo/lamb.html"/>
-    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
+    <meta property="og:image:url" content="http://www.beerstrot.it/asset/img/large/lamb.jpg"/>
+    <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
+    <link rel="canonical" href="http://www.beerstrot.it/menu/cibo/lamb.html"/>
+    <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -32,7 +32,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
             <li class="name">
-                 <h2><a href="http://beerstrot.it"><img class="img-logo" src="http://beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h2>
+                 <h2><a href="http://www.beerstrot.it"><img class="img-logo" src="http://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h2>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -41,31 +41,31 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li class="active"><a href="http://beerstrot.it/menu/">Menù</a></li>
+                <li class="active"><a href="http://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/take-away/">Take Away</a></li>
+                <li><a href="http://www.beerstrot.it/take-away/">Take Away</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
+                <li><a href="http://www.beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/social/">Social</a></li>
+                <li><a href="http://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/contatti/">Contatti</a></li>
+                <li><a href="http://www.beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/blog/">Blog</a></li>
+                <li><a href="http://www.beerstrot.it/blog/">Blog</a></li>
             </ul>
         </section>
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.it/asset/img/large/lamb.jpg" alt="Hamburger Lamb"/>
+    <img class="image-hero" src="http://www.beerstrot.it/asset/img/large/lamb.jpg" alt="Hamburger Lamb"/>
     <div class="row">
         <aside class="medium-5 large-4 columns">
            <header>
                 <div class="row">
                     <div class="medium-12 large-12 columns">
                         <h1>Hamburger Lamb</h1>
-                        <h6 class="by-line">Scritto da <a href="http://beerstrot.it/contatti/team/giulia-mazza.html">Giulia Mazza</a> <br>il 7 Giugno 2015</h6>
-                        <h6 class="by-line">foto <a href="http://beerstrot.it/contatti/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
+                        <h6 class="by-line">Scritto da <a href="http://www.beerstrot.it/contatti/team/giulia-mazza.html">Giulia Mazza</a> <br>il 7 Giugno 2015</h6>
+                        <h6 class="by-line">foto <a href="http://www.beerstrot.it/contatti/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
                     </div>
                 </div>
             </header>
@@ -88,13 +88,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="block-grid-social-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/cibo/lamb.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://www.beerstrot.it/menu/cibo/lamb.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/cibo/lamb.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://www.beerstrot.it/menu/cibo/lamb.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/cibo/lamb.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://www.beerstrot.it/menu/cibo/lamb.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
@@ -106,8 +106,8 @@
     <div class="row">
         <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
             <div class="clearfix">
-                <a href="http://beerstrot.it/menu/#fndtn-cibo" class="left">&larr; Torna al menu</a>
-                <a href="http://beerstrot.it/menu/cibo/cecilia.html" class="right">Cecilia &rarr;</a>
+                <a href="http://www.beerstrot.it/menu/#fndtn-cibo" class="left">&larr; Torna al menu</a>
+                <a href="http://www.beerstrot.it/menu/cibo/cecilia.html" class="right">Cecilia &rarr;</a>
             </div>
         </div> 
     </div>
@@ -218,19 +218,19 @@
     <div class="row footer">
         <div class="small-12 medium-12 large-12 columns">
             <p class="links">
-                <a href="http://beerstrot.it">Home</a>
-                <a href="http://beerstrot.it/menu/">Menù</a>
-                <a href="http://beerstrot.it/take-away/">Take Away</a>
-                <a href="http://beerstrot.it/eventi/">Eventi</a>
-                <a href="http://beerstrot.it/social/">Social</a>
-                <a href="http://beerstrot.it/contatti/">Contatti</a>
-                <a href="http://beerstrot.it/blog/">Blog</a>
+                <a href="http://www.beerstrot.it">Home</a>
+                <a href="http://www.beerstrot.it/menu/">Menù</a>
+                <a href="http://www.beerstrot.it/take-away/">Take Away</a>
+                <a href="http://www.beerstrot.it/eventi/">Eventi</a>
+                <a href="http://www.beerstrot.it/social/">Social</a>
+                <a href="http://www.beerstrot.it/contatti/">Contatti</a>
+                <a href="http://www.beerstrot.it/blog/">Blog</a>
             </p>
         </div>
     </div>
 <!-- fine navbar footer-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
-    <script src="http://beerstrot.it/js/app.min.js"></script>
+    <script src="http://www.beerstrot.it/js/app.min.js"></script>
 </body>
 </html>
