--- a/menu/index.html
+++ b/menu/index.html
@@ -10,12 +10,12 @@
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta property="fb:app_id" content="1549149915357715"/>
-    <meta property="og:url" content="http://beerstrot.it/menu/"/>
+    <meta property="og:url" content="http://www.beerstrot.it/menu/"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Menù"/>
-    <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="canonical" href="http://beerstrot.it/menu/"/>
-    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
+    <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
+    <link rel="canonical" href="http://www.beerstrot.it/menu/"/>
+    <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -24,7 +24,7 @@
     <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area" itemscope itemtype="http://schema.org/Restaurant">
             <li class="name">
-                 <h2><a href="http://beerstrot.it"><img class="img-logo" src="http://beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h2>
+                 <h2><a href="http://www.beerstrot.it"><img class="img-logo" src="http://www.beerstrot.it/asset/img/svgs/logo.svg" alt="Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></h2>
             </li>
             <li class="toggle-topbar menu-icon">
                 <a href="#"><span></span></a>
@@ -33,17 +33,17 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li class="active"><a href="http://beerstrot.it/menu/">Menù</a></li>
+                <li class="active"><a href="http://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/take-away/">Take Away</a></li>
+                <li><a href="http://www.beerstrot.it/take-away/">Take Away</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
+                <li><a href="http://www.beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/social/">Social</a></li>
+                <li><a href="http://www.beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/contatti/">Contatti</a></li>
+                <li><a href="http://www.beerstrot.it/contatti/">Contatti</a></li>
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/blog/">Blog</a></li>
+                <li><a href="http://www.beerstrot.it/blog/">Blog</a></li>
             </ul>
         </section>
     </nav>
@@ -143,15 +143,15 @@
                                 <p>360 grammi di manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,5</span></a></h3>    
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,5</span></a></h3>    
                                 <p>180 grammi di manzo, cheddar, cipolla caramellata, insalata</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,8</span></a></h3>    
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,8</span></a></h3>    
                                 <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,8</span></a></h3> 
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,8</span></a></h3> 
                                 <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
                             </li>
                             <li>
@@ -159,7 +159,7 @@
                                 <p>180 grammi di manzo, fontina, funghi di stagione</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/lamb.html">Lamb<span class="right">8,8</span></a></h3>    
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/lamb.html">Lamb<span class="right">8,8</span></a></h3>    
                                 <p>180 grammi di agnello, salsa allo yogurt, rucola</p>
                             </li>
                             <li>
@@ -167,7 +167,7 @@
                                 <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/cecilia.html">Cecilia<span class="right">8</span></a></h3>    
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/cecilia.html">Cecilia<span class="right">8</span></a></h3>    
                                 <p>180 grammi di ceci e avocado con composta leggermente piccante di verdure e menta</p>
                             </li>
                             <li>
@@ -201,7 +201,7 @@
                         <h2 class="subheader">Carni <br></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine<span class="right">10,5</span></a></h3>    
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine<span class="right">10,5</span></a></h3>    
                                 <p>costine di maiale al forno in salsa barbeque servite con patate fritte</p>
                             </li>
                             <li>
@@ -213,7 +213,7 @@
                                 <p>chili piccante con carne e fagioli servito in pagnotta</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/buffalo-chicken-wings.html">Buffalo Chicken Wings<span class="right">7,5</span></a></h3>    
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/buffalo-chicken-wings.html">Buffalo Chicken Wings<span class="right">7,5</span></a></h3>    
                                 <p>alette di pollo in salsa buffalo piccante, servite con crema di gorgonzola</p>
                             </li>
                             <li>
@@ -234,11 +234,11 @@
                                 <p>brownie di cioccolato e nocciole servito con crema di mascarpone</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/birramisu.html">Birramisù<span class="right">5</span></a></h3>
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/birramisu.html">Birramisù<span class="right">5</span></a></h3>
                                 <p>tiramisù alla birra stout</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/cheesecake.html">Cheesecake<span class="right">5</span></a></h3>
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/cheesecake.html">Cheesecake<span class="right">5</span></a></h3>
                                 <p>cheesecake stile new york</p>
                             </li>
                             <li>
@@ -868,19 +868,19 @@
     <div class="row footer">
         <div class="small-12 medium-12 large-12 columns">
             <p class="links">
-                <a href="http://beerstrot.it">Home</a>
-                <a href="http://beerstrot.it/menu/">Menù</a>
-                <a href="http://beerstrot.it/take-away/">Take Away</a>
-                <a href="http://beerstrot.it/eventi/">Eventi</a>
-                <a href="http://beerstrot.it/social/">Social</a>
-                <a href="http://beerstrot.it/contatti/">Contatti</a>
-                <a href="http://beerstrot.it/blog/">Blog</a>
+                <a href="http://www.beerstrot.it">Home</a>
+                <a href="http://www.beerstrot.it/menu/">Menù</a>
+                <a href="http://www.beerstrot.it/take-away/">Take Away</a>
+                <a href="http://www.beerstrot.it/eventi/">Eventi</a>
+                <a href="http://www.beerstrot.it/social/">Social</a>
+                <a href="http://www.beerstrot.it/contatti/">Contatti</a>
+                <a href="http://www.beerstrot.it/blog/">Blog</a>
             </p>
         </div>
     </div>
 <!-- fine navbar footer-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
-    <script src="http://beerstrot.it/js/app.min.js"></script>
+    <script src="http://www.beerstrot.it/js/app.min.js"></script>
 </body>
 </html>
