--- a/menu/index.html
+++ b/menu/index.html
@@ -300,7 +300,7 @@
                             </li>
                             <li>
                                 <h3>Eggs Norwegian<span class="right">7,5</span></h3>
-                                <p>due uova in camicia servite su pane tostato con salmone a umicato e salsa olandese</p>
+                                <p>due uova in camicia servite su pane tostato con salmone affumicato e salsa olandese</p>
                             </li>
                             <li>
                                 <h3>Eggs Scrambled<span class="right">7</span></h3>
