--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
     <div class="row">
         <div class="medium-12 large-12 columns">
             <h1>Abbiamo bevuto troppo <span>:)</span></h1>
-            <p>Non abbiamo idea di dove sia la pagina che cerchi.</p>
+            <p>Non sappiamo dove sia la pagina che cerchi.</p>
             <a href="http://www.beerstrot.it" class="left">&larr; Torna a casa</a>
         </div>
     </div>
