--- a/eventi/san-silvestro.html
+++ b/eventi/san-silvestro.html
@@ -97,11 +97,11 @@
                 </header>
             </aside>
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
-                <h2>Menù a base di Castagne, Funghi e Vin Brulé</h2>
+                <h2>Cenone dell'Ultimo dell'Anno? Fai il botto a Ca' Vecchia Beerstrot</h2>
                 <p>Per la sarata di San Silvestro abbiamo creato un <strong>menù speciale a 65€</strong> bevande incluse.</p>
                 <p>Solo su prenotazone.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
-            <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
+                <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
                 <hr>
                 <h2>Menù</h2>
                 <h3 class="subheader">Antipasti</h3>
@@ -129,7 +129,9 @@
                     <li>Caffè e Amari</li>
                 </ul>
                 <hr>
-            </div>   
+                <p>FInito il dolce alle 01:00 circa spostiamo i tavoli e diamo inizio alle danze. Apertura del locale a tutti.</p>
+                 <p>Birre artigianali, calice di Prosecco e Drinks a bancone a partire da 5€.</p>
+            </div>
         </article>
     </div>
 <!-- fine articolo -->
