--- a/eventi/san-silvestro.html
+++ b/eventi/san-silvestro.html
@@ -82,7 +82,7 @@
                <header>
                     <div class="row">
                         <div class="medium-12 large-12 columns">
-                            <h1>Cena di San Silvestro</h1>
+                            <h1>Cenone di San Silvestro</h1>
                         </div>
                     </div>
                     <div class="row">
