--- a/eventi/san-silvestro.html
+++ b/eventi/san-silvestro.html
@@ -129,7 +129,7 @@
                     <li>Caffè e Amari</li>
                 </ul>
                 <hr>
-                <p>Finiti caffè e amari alle 01:00 circa, spostiamo i tavoli e diamo inizio alle danze. <strong>Locale aperto a tutti</strong>. </p>
+                <p>Finiti caffè e amari alle 01:00 circa, spostiamo i tavoli e diamo inizio alle danze. <br><strong>Locale aperto a tutti</strong>. </p>
                  <p>Birre artigianali, calice di Prosecco e Drinks a bancone a partire da 5€.</p>
             </div>
         </article>
