--- a/eventi/san-silvestro.html
+++ b/eventi/san-silvestro.html
@@ -99,11 +99,15 @@
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Cenone dell'Ultimo dell'Anno? <br>Fai il botto a Ca' Vecchia Beerstrot</h2>
                 <p>Per la sarata di San Silvestro abbiamo creato un <strong>menù speciale</strong> a 65€ bevande incluse.</p>
-                <p>Solo su prenotazone. Affrettati: abbiamo solo 60 posti disponibili.</p>
+                <p>Prenotazone richiesta. Affrettati: abbiamo solo 60 posti disponibili.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
                 <hr>
                 <h2>Menù</h2>
+                <h3 class="subheader">Brindisi di Benvenuto</h3>
+                <ul>
+                    <li>Cocktail e stuzzichini</li>
+                </ul>
                 <h3 class="subheader">Antipasti</h3>
                 <h3 class="menu-subheader"><small>Serviti con Birra Artigianale o Vino della casa</small></h3>
                 <ul>
@@ -129,8 +133,8 @@
                     <li>Caffè e Amari</li>
                 </ul>
                 <hr>
-                <p>Finiti caffè e amari alle 01:00 circa, spostiamo i tavoli e diamo inizio alle danze. <br><strong>Locale aperto a tutti</strong>. </p>
-                 <p>Birre artigianali, calice di Prosecco e Drinks a bancone a partire da 5€.</p>
+                <p>Finiti caffè e amari alle 01:00 circa, spostiamo i tavoli e diamo inizio alle danze. <br><strong>Locale aperto a tutti</strong>.</p>
+                 <p>Birre artigianali, calice di Prosecco e Drinks a bancone a partire da 5€. Buffet di Frutta.</p>
             </div>
         </article>
     </div>
