--- a/eventi/san-silvestro.html
+++ b/eventi/san-silvestro.html
@@ -5,21 +5,21 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Cena di San Silvestro</title>
-    <meta name="description" content="31 Dicembre ore 21:45. Cena di San Silvestro con menù di tortellini, hamburger di pollo cotechino e manzo, birre artigianali e prosecco"/>
+    <meta name="description" content="31 Dicembre ore 21:15. Cena di San Silvestro con menù di tortellini, hamburger di pollo cotechino e manzo, birre artigianali e prosecco"/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Andrea Tagliazucchi"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Cena di San Silvestro"/>
-    <meta name="twitter:description" content="31 Dicembre ore 21:45. Cena di San Silvestro con menù di tortellini, hamburger di pollo cotechino e manzo, birre artigianali e prosecco"/>
+    <meta name="twitter:description" content="31 Dicembre ore 21:15. Cena di San Silvestro con menù di tortellini, hamburger di pollo cotechino e manzo, birre artigianali e prosecco"/>
     <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/san-silvestro.jpg"/>
     <meta name="twitter:url" content="http://www.beerstrot.it/eventi/san-silvestro.html"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://www.beerstrot.it/eventi/san-silvestro.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Cena di San Martino"/>
-    <meta property="og:description" content="31 Dicembre ore 21:45. Cena di San Silvestro con menù di tortellini, hamburger di pollo cotechino e manzo, birre artigianali e prosecco"/>
+    <meta property="og:description" content="31 Dicembre ore 21:15. Cena di San Silvestro con menù di tortellini, hamburger di pollo cotechino e manzo, birre artigianali e prosecco"/>
     <meta property="og:image" content="http://www.beerstrot.it/asset/img/large/san-silvestro.jpg"/>
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1920">
@@ -89,7 +89,7 @@
                         <div class="medium-12 large-12 columns">
                             <div class="share-block">
                                 <h5 class="date" style="margin-top: 0.5em;">31 Dicembre 2015</h5>
-                                <h5>Alle 21:45</h5>
+                                <h5>Alle 21:15</h5>
                                 <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i> Ca' Vecchia Beerstrot</a></h5>
                             </div>
                         </div>
@@ -104,7 +104,7 @@
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
                 <hr>
                 <h2>Menù</h2>
-                <h3 class="subheader">Brindisi di Benvenuto</h3>
+                <h3 class="subheader">Aperitivo di Benvenuto</h3>
                 <ul>
                     <li>Cocktail e stuzzichini</li>
                 </ul>
@@ -133,7 +133,7 @@
                     <li>Caffè e Amari</li>
                 </ul>
                 <hr>
-                <p>Finiti caffè e amari alle 01:00 circa, spostiamo i tavoli e diamo inizio alle danze. <br><strong>Locale aperto a tutti</strong>.</p>
+                <p>Finiti caffè e amari alle 01:00 circa, spostiamo i tavoli e diamo inizio alle danze. <strong>Locale aperto a tutti</strong>.</p>
                  <p>Birre artigianali, calice di Prosecco e Drinks a bancone a partire da 5€. Buffet di Frutta.</p>
             </div>
         </article>
