--- a/eventi/san-silvestro.html
+++ b/eventi/san-silvestro.html
@@ -97,7 +97,7 @@
                 </header>
             </aside>
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
-                <h2>Cenone dell'Ultimo dell'Anno? <br>Fai il botto a Ca' Vecchia Beerstrot</h2>
+                <h2>Fai il botto a Ca' Vecchia Beerstrot</h2>
                 <p>Per la sarata di San Silvestro abbiamo creato un <strong>menù speciale</strong> a 65€ bevande incluse.</p>
                 <p>Prenotazone richiesta. Affrettati: abbiamo solo 60 posti disponibili.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
