update beer menu

--- a/menu/index.html
+++ b/menu/index.html
@@ -543,20 +543,60 @@
                         <h2 class="subheader"><small>acide</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Crooked Stave Citrus<span class="right">15</span></h3>
-                                <p>5,5% 37,5cl</p>
+                                <h3>Against The Grain Little Did<span class="right">17</span></h3>
+                                <p>6,8% 75cl</p>
                             </li>
                             <li>
-                                <h3>Hopfenstark Boson de Higgs<span class="right">19</span></h3>
-                                <p>3,8% 75cl</p>
+                                <h3>Black Fang<span class="right">11</span></h3>
+                                <p>6% 50cl</p>
                             </li>
                             <li>
                                 <h3>Brekeriet Saison Sauvage<span class="right">19</span></h3>
                                 <p>6% 75cl</p>
                             </li>
                             <li>
+                                <h3>Crooked Stave Citrus<span class="right">15</span></h3>
+                                <p>5,5% 37,5cl</p>
+                            </li>
+                            <li>
+                                <h3>Crooked Stave Cranberry<span class="right">15</span></h3>
+                                <p>4,5% 37,5cl</p>
+                            </li>
+                            <li>
+                                <h3>Crooked Stave Surette<span class="right">15</span></h3>
+                                <p>6,2% 37,5cl</p>
+                            </li>
+                            <li>
+                                <h3>Crooked Stave Vielle<span class="right">15</span></h3>
+                                <p>6,2% 37,5cl</p>
+                            </li>
+                            <li>
+                                <h3>Jolly Pumpkin Maracaib<span class="right">17</span></h3>
+                                <p>7,5% 75cl</p>
+                            </li>
+                            <li>
+                                <h3>Jolly Pumpkin Bam Biere<span class="right">17</span></h3>
+                                <p>4,5% 75cl</p>
+                            </li>
+                            <li>
+                                <h3>Mad Hatter Manchester Tart<span class="right">5</span></h3>
+                                <p>2,9% 33cl</p>
+                            </li>
+                            <li>
+                                <h3>Necromangocon<span class="right">11</span></h3>
+                                <p>6% 50cl</p>
+                            </li>
+                            <li>
+                                <h3>Tall Tale<span class="right">17</span></h3>
+                                <p>8,5% 75cl</p>
+                            </li>
+                            <li>
                                 <h3>The Willows Family Ales<span class="right">22</span></h3>
                                 <p>7% 75cl</p>
+                            </li>
+                            <li>
+                                <h3>Wild Beer Indigo Child<span class="right">8,5</span></h3>
+                                <p>8% 33cl</p>
                             </li>
                         </ul>
                     </div>
