--- a/eventi/san-silvestro.html
+++ b/eventi/san-silvestro.html
@@ -18,7 +18,7 @@
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://www.beerstrot.it/eventi/san-silvestro.html"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Cena di San Martino"/>
+    <meta property="og:title" content="Cena di San Silvestro"/>
     <meta property="og:description" content="31 Dicembre ore 21:15. Cena di San Silvestro con menù di tortellini, hamburger di pollo cotechino e manzo, birre artigianali e prosecco"/>
     <meta property="og:image" content="http://www.beerstrot.it/asset/img/large/san-silvestro.jpg"/>
     <meta property="og:image:type" content="image/jpeg" />
