--- a/eventi/san-silvestro.html
+++ b/eventi/san-silvestro.html
@@ -113,7 +113,7 @@
                 <ul>
                     <li>Cannellone di verza ripieno di patate e pancetta</li>
                     <li>Sformatino di funghi di bosco</li>
-                    <li>insalata fresca di finocchio, arance e olive taggiasche</li>
+                    <li>Insalata fresca di finocchio, arance e olive taggiasche</li>
                 </ul>
                 <h3 class="subheader">Primi</h3>
                 <h3 class="menu-subheader"><small>Serviti con Birra Artigianale o Vino della casa</small></h3>
