--- a/menu/index.html
+++ b/menu/index.html
@@ -199,8 +199,8 @@
                         <h2 class="subheader">Zuppe <br></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Vellutata di Zucche<span class="right">4,5</span></h3>    
-                                <p>zuppa vegetariana</p>
+                                <h3>Vellutata di Castagne<span class="right">4,5</span></h3>    
+                                <p>zuppa di castagne con funghi e pancetta croccante</p>
                             </li>
                             <li>
                                 <h3>Orzetto alla Trentina<span class="right">4,5</span></h3>    
