--- a/menu/index.html
+++ b/menu/index.html
@@ -670,6 +670,10 @@
                                 <p>conti di buscareto</p>
                             </li>
                             <li>
+                                <h3>Spumante Extra Dry<span class="right">3,5 | 13</span></h3>
+                                <p>val d'oca </p>
+                            </li>
+                            <li>
                                 <h3>Franciacorta Brut<span class="right">26</span></h3>
                                 <p>mosnel</p>
                             </li>
@@ -691,7 +695,7 @@
                                 <p>col di corte</p>
                             </li>
                             <li>
-                                <h3>Spumante Moscato Dolce<span class="right">12</span></h3>
+                                <h3>Spumante Moscato Dolce<span class="right">3,5 | 13</span></h3>
                                 <p>val d'oca </p>
                             </li>
                         </ul>
