--- a/menu/index.html
+++ b/menu/index.html
@@ -691,7 +691,7 @@
                         <h2 class="subheader">Dolci e Passiti</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Passito di Verdicchio 50cl<span class="right">24</span></h3>
+                                <h3>Passito di Verdicchio 50cl<span class="right">5 | 18</span></h3>
                                 <p>col di corte</p>
                             </li>
                             <li>
