--- a/menu/index.html
+++ b/menu/index.html
@@ -170,8 +170,8 @@
                                 <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
                             </li>
                             <li>
-                                <h3>Autunno<span class="right">8,8</span></h3> 
-                                <p>180 grammi di manzo, fontina, funghi di stagione</p>
+                                <h3>Inverno<span class="right">8,8</span></h3> 
+                                <p>180 grammi di manzo, taleggio, pancetta, insalata</p>
                             </li>
                             <li>
                                 <h3><a href="http://www.beerstrot.it/menu/cibo/lamb.html">Lamb<span class="right">8,8</span></a></h3>    
@@ -216,6 +216,14 @@
                         <h2 class="subheader">Carni <br></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
+                                <h3><a href="http://www.beerstrot.it/menu/cibo/buffalo-chicken-wings.html">Buffalo Chicken Wings<span class="right">7,5</span></a></h3>    
+                                <p>alette di pollo in salsa buffalo piccante, servite con crema di gorgonzola</p>
+                            </li>
+                            <li>
+                                <h3>Chili<span class="right">7,5</span></h3>    
+                                <p>chili piccante con carne e fagioli servito in pagnotta</p>
+                            </li>
+                            <li>
                                 <h3><a href="http://www.beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine<span class="right">10,5</span></a></h3>    
                                 <p>costine di maiale al forno in salsa barbeque servite con patate fritte</p>
                             </li>
@@ -224,12 +232,8 @@
                                 <p>stinco di maiale al forno servito con purè di patate</p>
                             </li>
                             <li>
-                                <h3>Chili<span class="right">7,5</span></h3>    
-                                <p>chili piccante con carne e fagioli servito in pagnotta</p>
-                            </li>
-                            <li>
-                                <h3><a href="http://www.beerstrot.it/menu/cibo/buffalo-chicken-wings.html">Buffalo Chicken Wings<span class="right">7,5</span></a></h3>    
-                                <p>alette di pollo in salsa buffalo piccante, servite con crema di gorgonzola</p>
+                                <h3>Tagliata<span class="right">16</span></h3>    
+                                <p>300 grammi di entrecôte di manzo servita su letto di rucola</p>
                             </li>
                             <li>
                                 <h3>T-Bone Steak<span class="right">4 per etto</span></h3>    
